2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/arith.txi: Add accumdim function to documentation.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/set.txi: Add powerset function to documentation.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add S_ISSOCK function to documentation.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add S_ISBLK and related functions to
	documentation.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/optim.txi: Add glpkmex function to documentation.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add compare_versions function to 
	documentation.

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/numbers.txi: Add sizemax function to documentation.
	* interpreter/doccheck/mk_undocumented_list: Add ifelse to functions
	not requiring documentation.

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/image.txi: Add whitebg function to documentation.
	* interpreter/plot.txi: Add reset function to documentation. 

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/linalg.txi: Add rsf2csf to documentation.

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/geometry.txi: Add trisurf to documentation.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* interpreter/arith.txi (Rational Approximations): Move here.
	Update menu.
	* interpreter/io.txi: From here.
	Update menu.
	* interpreter/octave.texi (Top): Update detailed menu.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* interpreter/mk_doc_cache.m, interpreter/mkoctfile.1,
	interpreter/munge-texi.cc, interpreter/doccheck/mk_undocumented_list:
	Strip trailing whitespace.

2011-01-26  Rik  <octave@nomad.inbox5.com>

	* interpreter/basics.txi: Use @code to eliminate extra single quotes
	in index.
	* interpreter/container.txi: Add @opindex citations for '.', '{' and
	'}'.

2011-01-26  Rik  <octave@nomad.inbox5.com>
