@@ -20,9 +20,10 @@
 ## @deftypefn  {Loadable Function} {[@var{prog}, @var{args}] =} gnuplot_binary ()
 ## @deftypefnx {Loadable Function} {[@var{old_prog}, @var{old_args}] =} gnuplot_binary (@var{new_prog}, @var{arg1}, @dots{})
 ## Query or set the name of the program invoked by the plot command
-## and any arguments to pass to it.  Previous arguments are returned
-## as a cell array.
-## The default value @code{\"gnuplot\"}.  @xref{Installation}.
+## when the graphics toolkit is set to "gnuplot".  Additional arguments to
+## pass to the external plotting program may also be given.
+## The default value is @code{"gnuplot"} without additional arguments.
+## @xref{Installation}.
 ## @end deftypefn
 
 ## Author: jwe
